fix mmixed content error

--- a/village_app/templates/apology.html
+++ b/village_app/templates/apology.html
@@ -3,5 +3,5 @@
 Apology
 {% endblock %}
 {% block content %}
-<img alt="{{ top }}" class="border" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/RiEoEXi.jpeg" title="{{ top }}">
+<img alt="{{ top }}" class="border" src="o-LAKE-LOUISE-570.jpeg" title="{{ top }}">
 {% endblock %}
